--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
@@ -26,9 +29,13 @@
     "@vue/cli-service": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
+    "electron": "^3.0.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "tslint-plugin-prettier": "^2.0.0",
     "typescript": "^3.0.0",
+    "vue-cli-plugin-electron-builder": "^1.0.0-rc.4",
     "vue-template-compiler": "^2.5.17"
-  }
+  },
+  "main": "background.js"
 }
