--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
+    "@types/axios": "^0.14.0",
+    "axios": "^0.18.0",
+    "firebase": "^5.5.5",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
@@ -31,7 +34,7 @@
     "@vue/cli-service": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
-    "electron": "^3.0.0",
+    "electron": "^2.0.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "stylus": "^0.54.5",
