--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
     "@types/axios": "^0.14.0",
+    "@types/moment": "^2.13.0",
     "axios": "^0.18.0",
     "firebase": "^5.5.5",
+    "moment": "^2.22.2",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
