--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tomatowk",
-  "version": "0.0.5",
+  "name": "el-tomatowk",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -12,9 +12,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-rc.1",
     "axios": "^0.18.0",
-    "firebase": "^5.5.5",
+    "firebase": "^5.5.6",
     "moment": "^2.22.2",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
@@ -25,23 +24,22 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.0",
-    "@types/mocha": "^5.2.4",
+    "@types/chai": "^4.1.6",
+    "@types/mocha": "^5.2.5",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-pwa": "^3.0.5",
     "@vue/cli-plugin-typescript": "^3.0.5",
-    "@vue/cli-plugin-unit-mocha": "^3.0.5",
+    "@vue/cli-plugin-unit-jest": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.20",
-    "chai": "^4.1.2",
-    "electron": "^2",
-    "less": "^3.0.4",
-    "less-loader": "^4.1.0",
+    "babel-core": "7.0.0-bridge.0",
+    "chai": "^4.2.0",
+    "electron": "^3.0.0",
+    "mocha": "^5.2.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "tslint-plugin-prettier": "^2.0.0",
+    "stylus-loader": "^3.0.2",
     "typescript": "^3.0.0",
-    "vue-cli-plugin-electron-builder": "^1.0.0-rc.4",
+    "vue-cli-plugin-electron-builder": "^1.0.0-rc.6",
     "vue-cli-plugin-vuetify": "^0.4.5",
     "vue-template-compiler": "^2.5.17",
     "vuetify-loader": "^1.0.5"
