--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "firebase": "^5.5.6",
+    "marked": "^0.5.1",
     "moment": "^2.22.2",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
@@ -47,7 +48,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "typescript": "^3.0.0",
-    "vue-cli-plugin-electron-builder": "^1.0.0-rc.6",
+    "vue-cli-plugin-electron-builder": "^1.0.0-rc.7",
     "vue-cli-plugin-vuetify": "^0.4.5",
     "vue-template-compiler": "^2.5.17",
     "vuetify-loader": "^1.0.5"
