--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
+    "vue-markdown": "^2.2.4",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
