--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.6",
+    "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-pwa": "^3.0.5",
@@ -51,6 +51,7 @@
     "typescript": "^3.0.0",
     "vue-cli-plugin-electron-builder": "^1.0.0-rc.7",
     "vue-cli-plugin-vuetify": "^0.4.5",
+    "vue-prism": "^1.0.5",
     "vue-template-compiler": "^2.5.17",
     "vuetify-loader": "^1.0.5"
   },
