--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,17 @@
-.DS_Store
-node_modules
-/dist
-record.json
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# local env files
+# expo
+.expo/
+
+# dependencies
+/node_modules
+
+# misc
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw*
-
-#Electron-builder output
-/dist_electron
