--- a/package.json
+++ b/package.json
@@ -1,59 +1,29 @@
 {
-  "name": "TOMATOWK",
-  "version": "0.0.9",
-  "description": "A tool for pomodoro technique",
-  "keywords": [
-    "electron",
-    "vue"
-  ],
+  "name": "tomatowk-mobile",
+  "version": "0.0.1",
+  "private": true,
+  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
-    "test:unit": "vue-cli-service test:unit"
+    "start": "react-native-scripts start",
+    "eject": "react-native-scripts eject",
+    "android": "react-native-scripts android",
+    "ios": "react-native-scripts ios",
+    "test": "jest"
   },
-  "repository": "https://github.com/nklayman/vue-cli-plugin-electron-builder.git",
-  "author": "FUKUDA yutaro <fuyutarow@gmail.com>",
-  "license": "MIT",
-  "private": false,
   "dependencies": {
-    "axios": "^0.18.0",
-    "firebase": "^5.5.6",
-    "marked": "^0.5.1",
-    "moment": "^2.22.2",
-    "register-service-worker": "^1.0.0",
-    "vue": "^2.5.17",
-    "vue-class-component": "^6.0.0",
-    "vue-markdown": "^2.2.4",
-    "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.3.0",
-    "vuex": "^3.0.1"
+    "expo": "^27.0.1",
+    "react": "16.3.1",
+    "react-native": "~0.55.2",
+    "vue-native-core": "0.0.5",
+    "vue-native-helper": "0.0.8"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.5",
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-pwa": "^3.0.5",
-    "@vue/cli-plugin-typescript": "^3.0.5",
-    "@vue/cli-plugin-unit-jest": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
-    "@vue/test-utils": "^1.0.0-beta.20",
-    "babel-core": "7.0.0-bridge.0",
-    "chai": "^4.2.0",
-    "electron": "^3.0.6",
-    "mocha": "^5.2.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "typescript": "^3.0.0",
-    "vue-cli-plugin-electron-builder": "^1.0.0-rc.7",
-    "vue-cli-plugin-vuetify": "^0.4.5",
-    "vue-prism": "^1.0.5",
-    "vue-template-compiler": "^2.5.17",
-    "vuetify-loader": "^1.0.5"
+		"jest-expo": "~31.0.0",
+    "react-native-scripts": "2.0.1",
+    "react-test-renderer": "16.6.1",
+    "vue-native-scripts": "0.0.14"
   },
-  "main": "background.js"
+  "jest": {
+    "preset": "jest-expo"
+  }
 }
