--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TOMATOWK",
+  "name": "tomatowk",
   "version": "0.0.9",
   "description": "A tool for pomodoro technique",
   "keywords": [
@@ -7,12 +7,9 @@
     "vue"
   ],
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 4180",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
     "test:unit": "vue-cli-service test:unit"
   },
   "repository": "https://github.com/nklayman/vue-cli-plugin-electron-builder.git",
@@ -49,11 +46,9 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "typescript": "^3.0.0",
-    "vue-cli-plugin-electron-builder": "^1.0.0-rc.7",
     "vue-cli-plugin-vuetify": "^0.4.5",
     "vue-prism": "^1.0.5",
     "vue-template-compiler": "^2.5.17",
     "vuetify-loader": "^1.0.5"
-  },
-  "main": "background.js"
+  }
 }
